tests/compliance/valid/08-directives.alp
!alp-version: 3.0.0

@project
  id: directive-demo
  status: production

!assert: status == "production"

!if: status == "production"

@task
  id: prod-task
  description: "Only present in production"
